# kaggle

./: analysis.py  final.py  main.py  pyproject.toml
quiz_5/: quiz_5.py
quiz_6/: quiz_6.py
titanic/: KNN_modeling.py  KNN_modeling_normal.py  analysis.py  analysis_2.py  back_feat_select.py  fwrd_feat_select.py  log.py  test.py
titanic/clustering/: KNN_modeling.py  KNN_modeling_normal.py  K_means_cluster.py
titanic/feature_selection/: back_feat_select.py  fwrd_feat_select.py
